# TheWatcher

./: .env.example  .gitignore  CHANGELOG.md  HOWTO.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/context/: architecture.md  decisions.md  stack.md
docs/architecture/: bdd-vision-architecture.md  intent-values-christopher.md  programming-context.md
docs/deployment/: local-setup.md
scripts/: setup.sh
src/bdd_vision/browser/: capture.py  cdp.py  controller.py
src/bdd_vision/cli/: main.py
src/bdd_vision/config/: settings.py
src/bdd_vision/core/: agent_runner.py  crawl_engine.py  orchestrator.py  reporter.py  spec_engine.py
src/bdd_vision/models/: base.py  claude_cu.py  deepseek.py  gemini.py  router.py
tests/: conftest.py
tests/unit/: test_agent_runner.py  test_crawl_engine.py  test_reporter.py  test_router.py  test_settings.py  test_spec_engine.py
